Add eco support

--- a/DustDeathPenalty/src/main/resources/assets/dustdeathpenalty/lang/en_US.lang
+++ b/DustDeathPenalty/src/main/resources/assets/dustdeathpenalty/lang/en_US.lang
@@ -1,2 +1,2 @@
-message.drop="&aYou drop &b%exp% &aexp, &b%item_count% &aitems"
+message.drop="&aYou drop &b%exp% &aexp, &b%item_count% &aitems, &c%money%"
 
